# plucogen

./: .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/development/: devcontainer.json
.devcontainer/installer/: devcontainer.json
.docker/: Dockerfile
src/plucogen/: __init__.py  __main__.py  cli.py  file.py  logging.py
src/plucogen/api/: __init__.py  entrypoint.py
src/plucogen/api/v0/: __init__.py  api.py  base.py  cli.py  consumer.py  generator.py  handler.py  pydantic.py  reader.py  resource.py  template.py  writer.py
src/plucogen/api/v0/api/: __init__.py  interface_base.py  interface_registry.py  module_path.py
src/plucogen/api/v0/project/: __init__.py  action.py  config.py  context.py  playbook.py  task.py
src/plucogen/api/v0/project/action/: __init__.py  api.py  cli.py
src/plucogen/api/v0/project/playbook/: __init__.py  api.py
src/plucogen/api/v0/system/: config.py
src/plucogen/cli/: __init__.py  __main__.py  api.py  core_info.py  parser.py
src/plucogen/consumers/: file.py
src/plucogen/consumers/yaml/: __init__.py
src/plucogen/generators/: __init__.py  cli.py  example.py
src/plucogen/generators/jinja/: __init__.py  extensions.py  render.py
src/plucogen/handlers/yaml/: __init__.py  api.py  tags.py
src/plucogen/python/: action.py
src/plucogen/util/: paths.py
test/: __init__.py  __main__.py  api.py  api_mock_module.py  cli.py  jinja.py  plugin.py  render.py  test_file_template.jinja.yaml  test_generation.jinja.yaml  test_generation.reference.yaml  test_generation.yaml  test_yaml_load_file.yaml  yaml.py
test/base/: test_case.py  test_runner.py
test/project/: __init__.py  action.py  config.py  playbook.py
test/test_subdir/: test_include.yaml  test_include_loop.yaml  test_included.yaml
