[tool.poetry]
name        = "plucogen"
version     = "0.2.4"
description = "Pluggable universal code generator using dataformats like JSON and YAML to generate files with template languages like Jinja2."
authors     = ["Jörn Krenzer <plucogen@joern.krenzer.space>"]
license     = "LGPL-3"
readme      = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
ConfigArgParse = "^1.5.3"
Jinja2 = "^3.1.2"
jsonschema = { extras = ["format"], version = "^4.17.3" }
"ruamel.yaml" = { extras = [
    "jinja2",
], version = "^0.17.32" }
pydantic = "^2.5.3"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
coverage   = "^7.2.7"
pycotap    = "^1.3.1"
black      = "^23.3.0"
isort      = "^5.13.2"
autoflake  = "^2.2.1"
poethepoet = "^0.25.0"

[tool.poetry.scripts]
plucogen = "plucogen.cli.__main__:main"

[tool.poetry.plugins]
[tool.poetry.plugins."plucogen.api.v0.generators"]
"generatorArgParsers" = "plucogen.generators:generatorParsers"

[tool.poetry.plugins."plucogen.api.v0.consumer"]
"file" = "plucogen.consumers.file:Interface"

[tool.poe]
poetry_command = "do"

[tool.poe.tasks.test]
cmd  = "python -m test --log-level debug"
help = "Run tests for the package"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
